Rename 'Projects' section to 'Courses'

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <img src="me.jpg" alt="Your Name portrait" width="240" height="240" />
 
       <!-- ====== PROJECTS/COURSES (add or rename items to courses instead of projects) ====== -->
-      <h2>Projects</h2>
+      <h2>Courses</h2>
       <ul>
-        <li>Course One — one sentence description.</li>
-        <li>Course Two — coming soon.</li>
+        <li>CISC 121 — Introduction to Computing Science.</li>
+        <li>CISC 221 — coming soon.</li>
       </ul>
 
       <!-- ====== CONTACT (update your links) ====== -->
